# VideoCreek

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ClassesDiagram_1_0.puml  Receiver_SequenceDiagram_1_0.puml  Sender_SequenceDiagram_1_0.puml
include/: CameraHandler.h  CmdArguments.h  CmdArgumentsParser.h  CompressionHandler.h  Mode.h  NetworkHandler.h  UdpStreamer.h  VideoCreek.h  VideoCreekCommon.h  VideoHandler.h
include/VideoCreekInstanceFactory/: IVideoCreekInstance.h  IVideoCreekInstanceFactory.h  ReceiverInstance.h  ReceiverInstanceFactory.h  SenderInstance.h  SenderInstanceFactory.h  VideoCreekInstanceFactory.h
src/: CameraHandler.cpp  CmdArguments.cpp  CmdArgumentsParser.cpp  CompressionHandler.cpp  NetworkHandler.cpp  UdpStreamer.cpp  VideoCreek.cpp  VideoHandler.cpp  main.cpp
src/VideoCreekInstanceFactory/: ReceiverInstance.cpp  ReceiverInstanceFactory.cpp  SenderInstance.cpp  SenderInstanceFactory.cpp  VideoCreekInstanceFactory.cpp
tests/: CMakeLists.txt
